# codecrafters-shell-cpp

./: CMakeLists.txt  CPPLINT.cfg  README.md  vcpkg.json  your_program.sh
src/: history.cpp  history.hpp  main.cpp  main.h  main.hpp  trie.cpp  trie.h  trie.hpp  utils.cpp  utils.h  utils.hpp
tests/: CMakeLists.txt  test_history.cpp  test_trie.cpp  test_utils.cpp
